package(default_visibility = ["//visibility:public"])
java_library(
    name = "metrics_influxdb",
    srcs = [
        "//metrics-influxdb/src/test/java/metrics_influxdb:sources"
    ],
    deps = [
        "//metrics-influxdb/src/main/java/metrics_influxdb/api/measurements:measurements" , 
        "//metrics-influxdb/src/main/java/metrics_influxdb/api/protocols:protocols" , 
        "//metrics-influxdb/src/main/java/metrics_influxdb:agg=._measurements_serialization/line" , 
        "//metrics-influxdb:tests_dependencies"
    ],
    runtime_deps = [
        
    ],
        testonly = 1,
)

java_test_discovery(
    name = "metrics_influxdb_test_discovery",
    tests_from = [":metrics_influxdb"],
    size = "small",
    print_discovered_classes = True,
    suffixes = ["Test", "Tests", "IT", "E2E"],
    prefixes = ["Test", "Tests", "IT", "E2E"],
    testonly = 1
)

sources()
