package(default_visibility = ["//visibility:public"])
java_library(

    name = "misc",
    srcs = [
        "//metrics-influxdb/src/main/java/metrics_influxdb/misc:sources"
    ],
    deps = [
        "//metrics-influxdb:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)

sources()
