package(default_visibility = ["//visibility:public"])
java_library(
    name = "measurements",
    srcs = [
        "//metrics-influxdb/src/test/java/metrics_influxdb/measurements:sources"
    ],
    deps = [
        "//metrics-influxdb/src/main/java/metrics_influxdb/api/measurements:measurements" , 
        "//metrics-influxdb/src/main/java/metrics_influxdb:agg=._measurements_serialization/line" , 
        "//metrics-influxdb/src/test/java/metrics_influxdb:metrics_influxdb" , 
        "//metrics-influxdb:tests_dependencies"
    ],
    runtime_deps = [
        
    ],
        testonly = 1,
)

java_test_discovery(
    name = "measurements_test_discovery",
    tests_from = [":measurements"],
    size = "small",
    print_discovered_classes = True,
    suffixes = ["Test", "Tests", "IT", "E2E"],
    prefixes = ["Test", "Tests", "IT", "E2E"],
    testonly = 1
)

sources()
