package(default_visibility = ["//visibility:public"])
java_library(

    name = "measurements",
    srcs = [
        "//metrics-influxdb/src/main/java/metrics_influxdb/api/measurements:sources"
    ],
    deps = [
        "//metrics-influxdb:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)

sources()
